--- a/tooling/tailwind/theme.css
+++ b/tooling/tailwind/theme.css
@@ -1,4 +1,3 @@
-
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
@@ -117,7 +116,7 @@
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
 
-  --sidebar: hsl(0 0% 98%)
+  --sidebar: hsl(0 0% 98%);
 }
 
 @theme inline {
